Fix cursor flicker (fixes #70)

--- a/css/common.css
+++ b/css/common.css
@@ -824,3 +824,7 @@ h3 {
 #align button:hover {
     background-color: #CCC;
 }
+
+#cursor-overlay {
+    background: transparent;
+}
